# liquidation-searcher

./: .envrc.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
conf/: prod.yml  staging.yml
deployment/: liquidation_searcher_dev.service
docs/: 01_trading_framework.md  02_orderly_hedge_strategy.md
src/liquidation_searcher/: engine_types.py  main.py  router.py
src/liquidation_searcher/collectors/: orderly_liquidation_rest.py  orderly_liquidation_ws.py
src/liquidation_searcher/engine/: core.py
src/liquidation_searcher/executors/: orderly_executor.py
src/liquidation_searcher/handlers/: health.py
src/liquidation_searcher/strategies/: orderly_hedge.py
src/liquidation_searcher/utils/: convert.py  event_loop.py  log.py
